--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@
                         <a href="#">Blog</a>
                     </li> 
                     <li>
-                        <a href="#">My Project</a>
-                    </li>
-                    <li>
                         <a href="#">More about me</a>
                     </li>
                 </ul> 
@@ -49,27 +46,27 @@
             <!-- The icon section  --> 
             <div class="icons">
                 <!-- Discord --> 
-                <button class="Click-btn"> 
+                <button type="button" class="Click-btn" onclick="Discord()"> 
                     <i class="fa-brands fa-discord"></i>
                 </button>
                 <!-- Codepen  --> 
-                <button class="Click-btn">
+                <button type="button" class="Click-btn" onclick="Codepen()">
                     <i class="fa-brands fa-codepen"></i>
                 </button> 
                 <!-- Linkedin  --> 
-                <button class="Click-btn">
+                <button type="button" class="Click-btn" onclick="Linkedin()">
                     <i class="fa-brands fa-linkedin-in"></i>
                 </button> 
                 <!-- Mastodon --> 
-                <button class="Click-btn">
+                <button type="button" class="Click-btn" onclick="Mastodon()">
                     <i class="fa-brands fa-mastodon"></i>
                 </button> 
                 <!-- Gitlab --> 
-                <button class="Click-btn">
+                <button type="button" class="Click-btn" onclick="Gitlab()">
                     <i class="fa-brands fa-gitlab"></i>
                 </button> 
                 <!-- Github  --> 
-                <button type="button" class="Click-btn" onclick="alert('Hello world')">
+                <button type="button" class="Click-btn" onclick="Github()">
                     <i class="fa-brands fa-github"></i>
                 </button>  
                    </footer> 
